--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,13 +16,13 @@
 	            </li>
 
 	            <li>
-				  <%= link_to "#" do %>
+				  <%= link_to new_user_registration_path do %>
 					<span class="glyphicon glyphicon-edit nav-item" aria-hidden="true"> sign up</span>
 	              <% end %>
 	            </li>
 
 	            <li>
-				  <%= link_to "#" do %>
+				  <%= link_to new_user_session_path do %>
 					<span class="glyphicon glyphicon-log-in nav-item" aria-hidden="true"> login</span>
 	              <% end %>
 	            </li>
