--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -6,7 +6,7 @@
 		   you can share and exchange your opinions , inpressions , and emotions<br>
 		   about various books!
 		</p>
-		<%= link_to "Log in", "#", class: "btn btn-info col-xs-10 col-xs-offset-1" %>
-		<%= link_to "Sign up", "#", class: "btn btn-success col-xs-10 col-xs-offset-1" %>
+		<%= link_to "Log in", new_user_session_path, class: "btn btn-info col-xs-10 col-xs-offset-1" %>
+		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-success col-xs-10 col-xs-offset-1" %>
 	</div>
 </div>
